用户角色菜单码砖中

--- a/colorui/main.css
+++ b/colorui/main.css
@@ -3579,7 +3579,7 @@ scroll-view.cu-steps .cu-item {
 }
 
 .bg-gradual-master {
-	background-color: rgb(144, 144, 144);
+	background-color: #0081ff;
 	color: #ffffff;
 }
 
